overflow fix

--- a/src/static/public/css/wu/main.css
+++ b/src/static/public/css/wu/main.css
@@ -1,9 +1,9 @@
 #wa-app {
 	position: relative;
 	--nms: 22px;
-	--new-mess-bg : #4A9300;
+	--new-mess-bg: #4A9300;
 	--new-mess-clr: #fff;
-	
+
 	--chat-hbr-bg: #eee;
 }
 
@@ -20,9 +20,10 @@
 	font-size: 12px;
 	flex-direction: column;
 	justify-content: center;
-} 
+}
 
-.chat {
+.chat,
+.user {
 	display: grid;
 	position: relative;
 	grid-template-columns: 50px auto var(--nms);
@@ -50,6 +51,7 @@
 	flex-direction: column;
 	justify-content: center;
 	padding: 0 20px;
+	overflow: scroll;
 }
 
 .chat-name {
@@ -57,8 +59,24 @@
 	font-size: 18px;
 }
 
-.last-mess {
+#user-list {
+	display: none;
+	opacity: 0;
+	transition: 0.3s;
+}
+
+.last-mess,
+.status {
+	position: relative;
 	color: #777;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+#chat-list {
+	transition: 0.2s;
+	opacity: 1;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -66,7 +84,7 @@
 		--new-mess-bg: #263900;
 		--chat-hbr-bg: #222;
 	}
-	
+
 	#wa-app svg * {
 		stroke: #ccc;
 	}
